--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/stopwatch.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>watchmart-timeless</title>
+    <title>Car Zone</title>
     <!-- Font Awesome CDN -->
     <link
       rel="stylesheet"
